--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<h1>Benjamin Eppinger</h1>
+						<p>Student of the IT&nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
