--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Benjamin Eppinger</h1>
-						<p>Student of the IT&nbsp;&bull;&nbsp; I'm still wokring on this &nbsp;&bull;&nbsp; If you can see this, I got my CNAME setup working correctly!</p>
+						<p>Student of the IT&nbsp;&bull;&nbsp; I'm still working on this &nbsp;&bull;&nbsp; If you can see this, I got my CNAME setup working correctly!</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
