--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="intro-text">
                         <span class="name">Benjamin Eppinger</span>
                         <hr class="star-light">
-                        <span class="skills">Information Sciences and Technology Undergraduate Student at Penn State</span>
+                        <span class="skills">I’m Ben Eppinger and I’m a current Undergraduate Student at The Pennsylvania State University. I am an Information Sciences and Technology Major with an intended graduation date of May 2019. I have developed a wide array of Information Technology related skills that I plan on putting to good use during and after my time at Penn State! Take a look below for more info about me!</span>
                     </div>
                 </div>
             </div>
@@ -169,11 +169,9 @@
             </div>
         </div>
         <div class="col-lg-8 col-lg-offset-2 text-center">
-            <br>
-            <a href="resume.pdf" class="btn btn-lg btn-outline">
-                <i class="fa fa-download"></i> Download PDF Résumé
-            </a>
-        </div>
+        <br>
+        <a href="resume.pdf" class="btn btn-lg btn-outline"> <em class="fa fa-download"></em> Download PDF Résumé </a></div>
+        <br>
     </section>
 
     <!-- Courses Section -->
@@ -234,7 +232,7 @@
                         <h3>Location</h3>
                         <p>Somewhere around
                             <br>University Park, PA 16802
-                            <br><a href= tell:18143108292>Call me for more info!</a>
+                            <br><a href= "mail:bxe5056@gmail.com">Email me for more info!</a>
                         </p>
                     </div>
                     <div class="footer-col col-md-4">
