--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="intro-text">
                         <span class="name">Benjamin Eppinger</span>
                         <hr class="star-light">
-                        <span class="skills">I’m Ben Eppinger and I’m a current Undergraduate Student at The Pennsylvania State University. I am an Information Sciences and Technology Major with an intended graduation date of May 2019. I have developed a wide array of Information Technology related skills that I plan on putting to good use during and after my time at Penn State! Take a look below for more info about me!</span>
+                        <span class="skills">I’m a current Undergraduate Student at The Pennsylvania State University. I am an Information Sciences and Technology Major with an intended graduation date of May 2019. I have developed a wide array of skills that I plan on putting to good use during and after my time at Penn State! <br>Take a look below for more info about me!</span>
                     </div>
                 </div>
             </div>
