--- a/index.html
+++ b/index.html
@@ -252,11 +252,10 @@
                                       Manipulate Crime Data </h5>
 									<br> 
                                     </a>
-                                    </td>
-                <td width="33%"><a href= "http://bulletins.psu.edu/undergrad/courses/I/IST/311" target="_blank">
-                                    <h3> Microsoft Office Specialist</h3>
-                                    <h4> Excel 2013</h4> 
-                                    <br>
+                </td>
+                <td width="33%"><h3> Microsoft Office Specialist</h3>
+                                    <h4> Excel 2013</h4>
+                                    <a href= "http://bulletins.psu.edu/undergrad/courses/I/IST/311" target="_blank">                                    <br>
                                     </a>
                                     </td>
                 <td width="33%"><a href= "GallupReport.pdf" target="_blank">
@@ -265,7 +264,7 @@
                                     </h3> 
                                     <br>
                                     </a>
-                                    </td>
+                </td>
                                     
               </tr>
               </table>
@@ -277,12 +276,9 @@
                                     </h4> 
                                     <br> 
                                     </a>
-                                    </td>
-                <td width="33%" align="center" valign="middle"><a href= "http://bulletins.psu.edu/undergrad/courses/I/IST/242" target="_blank">
-                     				<h3> Microsoft6 Technology Associate</h3>
-                     				<h4> Windows Operating System Fundamentals</h4> 
-                                    <br>
-                                    </a>
+                </td>
+                <td width="33%" align="center" valign="middle"><h3> Microsoft6 Technology Associate</h3>
+                     				<h4> Windows Operating System Fundamentals</h4>                                    <br>
                                     </td>
                 
               </tr>
