Fixed Evidence Section

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                     <br> 
                                     </a>
                 </td>
-                <td width="33%" align="center" valign="middle"><h3> Microsoft6 Technology Associate</h3>
+                <td width="33%" align="center" valign="middle"><h3> Microsoft Technology Associate</h3>
                      				<h4> Windows Operating System Fundamentals</h4>                                    <br>
                                     </td>
                 
