--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 									<br> 
                                     </a>
                 </td>
-                <td width="33%"><h3> Microsoft Office Specialist</h3>
-                                    <h4> Excel 2013</h4>
+                <td width="33%"><h3> <a href="#">Microsoft Office Specialist</a></h3>
+                                    <h4><a href="#"> Excel 2013</a></h4>
                                     <a href= "http://bulletins.psu.edu/undergrad/courses/I/IST/311" target="_blank">                                    <br>
                                     </a>
                                     </td>
@@ -277,8 +277,8 @@
                                     <br> 
                                     </a>
                 </td>
-                <td width="33%" align="center" valign="middle"><h3> Microsoft Technology Associate</h3>
-                     				<h4> Windows Operating System Fundamentals</h4>                                    <br>
+                <td width="33%" align="center" valign="middle"><h3> <a href="#">Microsoft Technology Associate</a></h3>
+                     				<h4><a href="#"> Windows Operating System Fundamentals</a></h4>                                    <br>
                                     </td>
                 
               </tr>
