--- a/index.html
+++ b/index.html
@@ -584,7 +584,9 @@
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
-
+    <a href="http://www.bidnapper.com">
+	ebay sniper
+    </a>
 </body>
 
 </html>
