--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="col-lg-8 col-lg-offset-2 text-center">
         <br>
-        <a href="resume.pdf" class="btn btn-lg btn-outline"> <em class="fa fa-download"></em> Download PDF Résumé </a></div><br><br>
+        <a href="#resume.pdf" class="btn btn-lg btn-outline"> <em class="fa fa-download"></em> Download PDF Résumé </a></div><br><br>
         <br>
     </section>
 
