--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="row">
                <p class="row">&nbsp;</p>
 <!-- <iframe src="https://app.box.com/embed/preview/wgua4rbng0sk2wh4f43km992cykeft76?direction=ASC&theme=dark" width="800" height="1050" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen> </iframe>
-               --> Temporarily Disabled 
+               --> Temporarily Disabled For Revisions
               <p>&nbsp;</p>
             </div>
         </div>
