--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   
 			</table>
 				<br><br><br><br>
-                <h3> Current GPA: 3.64  | Semester Classification: 6 (Junior)</h3>
+                <h3> Current GPA: 3.73  | Semester Classification: 7 (Senior)</h3>
                 
                 <!--<div class="col-lg-4 col-lg-offset-2">
                      <a href= "http://bulletins.psu.edu/undergrad/courses/I/IST/331" target="_blank">
