--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="intro-text">
                         <span class="name">Benjamin Eppinger</span>
                         <hr class="star-light">
-                        <span class="skills">I’m a current Undergraduate Student at The Pennsylvania State University. I am an Information Sciences and Technology Major with an intended graduation date of May 2019. I have developed a wide array of skills that I plan on putting to good use during and after my time at Penn State! <br>Take a look below for more info about me!</span>
+                        <span class="skills">I’m a current Undergraduate and Masters Student at The Pennsylvania State University. I am an Information Sciences and Technology Major with an intended graduation date of May 2019. I have developed a wide array of skills that I plan on putting to good use during and after my time at Penn State! <br>Take a look below for more info about me!</span>
                     </div>
                 </div>
             </div>
@@ -108,14 +108,14 @@
             </div>
             <div class="row">
                <p class="row">&nbsp;</p>
-<!-- <iframe src="https://app.box.com/embed/preview/wgua4rbng0sk2wh4f43km992cykeft76?direction=ASC&theme=dark" width="800" height="1050" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen> </iframe>
-               --> Temporarily Disabled For Revisions
+<iframe src="https://app.box.com/embed/preview/pwij6n53hlwovx326didztc917ysdrir?direction=ASC&theme=dark" width="800" height="1050" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen> </iframe>
+                
               <p>&nbsp;</p>
             </div>
         </div>
         <div class="col-lg-8 col-lg-offset-2 text-center">
         <br>
-        <a href="#resume.pdf" class="btn btn-lg btn-outline"> <em class="fa fa-download"></em> Download PDF Résumé </a></div><br><br>
+        <a href="resume.pdf" class="btn btn-lg btn-outline"> <em class="fa fa-download"></em> Download PDF Résumé </a></div><br><br>
         <br>
     </section>
 
