--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <!--
+		    <li class="page-scroll">
                         <a href="#resume">Résumé</a>
                     </li>
+-->
                     <li class="page-scroll">
                         <a href="#courses">Courses</a>
                     </li>
@@ -96,7 +98,7 @@
         </div>
     </header>
 
-    <!-- Résumé Grid Section -->
+    <!-- Résumé Grid Section 
     <section id="resume">
         <div class="container">
             <div class="row">
@@ -108,9 +110,9 @@
             </div>
             <div class="row">
                <p class="row">&nbsp;</p>
-		    <!--
+		    
 <iframe src="https://app.box.com/embed/preview/pwij6n53hlwovx326didztc917ysdrir?direction=ASC&theme=dark" width="800" height="1050" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen> </iframe>
-                -->
+                
               <p>&nbsp;</p>
             </div>
         </div>
