--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <!--
+                    
 		    <li class="page-scroll">
                         <a href="#resume">Résumé</a>
                     </li>
--->
+
                     <li class="page-scroll">
                         <a href="#courses">Courses</a>
                     </li>
@@ -98,7 +98,7 @@
         </div>
     </header>
 
-    <!-- Résumé Grid Section 
+    <!-- Résumé Grid Section -->
     <section id="resume">
         <div class="container">
             <div class="row">
@@ -118,7 +118,9 @@
         </div>
         <div class="col-lg-8 col-lg-offset-2 text-center">
         <br>
-        <a href="resume.pdf" class="btn btn-lg btn-outline"> <em class="fa fa-download"></em> Download PDF Résumé </a></div><br><br>
+        <!--
+		<a href="resume.pdf" class="btn btn-lg btn-outline"> <em class="fa fa-download"></em> Download PDF Résumé </a></div><br><br>
+	-->
         <br>
     </section>
 
