--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="index.html/#page-top"></a>
+                        <a href="index.html#page-top"></a>
                     </li>
                     
 		    <li class="page-scroll">
-                        <a href="index.html/#resume">Résumé</a>
+                        <a href="index.html#resume">Résumé</a>
                     </li>
 
                     <li class="page-scroll">
-                        <a href="index.html/#courses">Courses</a>
+                        <a href="index.html#courses">Courses</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="index.html/#evidence">Evidence of Work</a>
+                        <a href="index.html#evidence">Evidence of Work</a>
                     </li>
 					<li class="page-scroll">
-                        <a href="#evidence">File Repo</a>
+                        <a href="dataRepo.html">File Repo</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="index.html/#contact">Contact</a>
+                        <a href="index.html#contact">Contact</a>
                     </li>
                 </ul>
             </div>
