--- a/dataRepo.html
+++ b/dataRepo.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>File Repository</h2>
+                    <h2><br><br>File Repository</h2>
                     <hr class="star-primary">
                 </div>
             </div>
