Added 505Presentation to DataRepo

--- a/dataRepo.html
+++ b/dataRepo.html
@@ -96,21 +96,23 @@
             </div>
             <table width="90%" border="0" align="center">
               <tr width="33%">
-                <td width="33%"><h3> <a href="#"></a></h3>
-                                    <h4><a href="#"></a></h4>
-                                    <a href= "" target="_blank">                                    <br>
+                <td width="33%" align="center" valign="middle"><a href= "/fileFolder/IST505-ProjectProposal.pptx" target="_blank">
+                                    <h3> IST 505  </h3><h5> Project Proposal Presentation </h5>
+									<br> 
                                     </a>
-                                    </td>
+                </td>  
 				<td width="33%" align="center" valign="middle"><a href= "/fileFolder/CareBnB_StoryBoard_All_Streamlined_FontRoboto.xd" target="_blank">
                                     <h3> IST 413  </h3><h5> CareBnB Adobe xD Prototype </h5>
 									<br> 
                                     </a>
                 </td>                
-                <td width="33%"><a href= "#" target="_blank">
+                <!--
+				<td width="33%"><a href= "#" target="_blank">
                                     <h3> 
                                     </h3> 
                                     </a>
                 </td>
+				-->
                                     
               </tr>
             </table>
