--- a/dataRepo.html
+++ b/dataRepo.html
@@ -96,16 +96,21 @@
             </div>
             <table width="90%" border="0" align="center">
               <tr width="33%">
-                <td width="33%" align="center" valign="middle"><a href= "/fileFolder/IST505-ProposalPresentation.pptx" target="_blank">
-                                    <h3> IST 505  </h3><h5> Project Proposal Presentation </h5>
-									<br> 
-                                    </a>
-                </td>  
-				<td width="33%" align="center" valign="middle"><a href= "/fileFolder/CareBnB_StoryBoard_All_Streamlined_FontRoboto.xd" target="_blank">
+                <td width="33%" align="center" valign="middle"><a href= "/fileFolder/CareBnB_StoryBoard_All_Streamlined_FontRoboto.xd" target="_blank">
                                     <h3> IST 413  </h3><h5> CareBnB Adobe xD Prototype </h5>
 									<br> 
                                     </a>
-                </td>                
+                </td> 
+				<td width="33%" align="center" valign="middle"><a href= "/fileFolder/IST505-ProposalPresentation.pptx" target="_blank">
+                                    <h3> IST 505  </h3><h5> Project Proposal Presentation </h5>
+									<br> 
+                                    </a>
+                </td>  				  
+				<td width="33%" align="center" valign="middle"><a href= "/fileFolder/525Poster.pptx" target="_blank">
+                                    <h3> IST 525  </h3><h5> IST 525 Class Project Poster </h5>
+									<br> 
+                                    </a>
+                </td>  				
                 <!--
 				<td width="33%"><a href= "#" target="_blank">
                                     <h3> 
