--- a/dataRepo.html
+++ b/dataRepo.html
@@ -125,6 +125,36 @@
 				-->
                                     
               </tr>
+              <tr width="25%">
+                <td width="25%" align="center" valign="middle"><a href= "/fileFolder/CareBnB_StoryBoard_All_Streamlined_FontRoboto.xd" target="_blank">
+                                    <h3> IST 413  </h3><h5> CareBnB Adobe xD Prototype </h5>
+									<br> 
+                                    </a>
+                </td> 
+				<td width="25%" align="center" valign="middle"><a href= "/fileFolder/IST505-ProposalPresentation.pptx" target="_blank">
+                                    <h3> IST 597  </h3><h5> Project Proposal Presentation </h5>
+									<br> 
+                                    </a>
+                </td>  				  
+				<td width="25%" align="center" valign="middle"><a href= "/fileFolder/525Poster.pptx" target="_blank">
+                                    <h3> IST 597  </h3><h5> AI - Content Moderation Presentation </h5>
+									<br> 
+                                    </a>
+                </td>  		
+		      		<td width="25%" align="center" valign="middle"><a href= "/fileFolder/Eppinger597ProposalPresentation.pptx" target="_blank">
+                                    <h3> IST 525  </h3><h5> IST 597 Project Proposal </h5>
+									<br> 
+                                    </a>
+                </td>  		
+                <!--
+				<td width="33%"><a href= "#" target="_blank">
+                                    <h3> 
+                                    </h3> 
+                                    </a>
+                </td>
+				-->
+                                    
+              </tr>
             </table>
             <!--  
 			<table width="90%" border="0" align="center">
