--- a/index.html
+++ b/index.html
@@ -592,7 +592,9 @@
 
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
-    
+    Try out <a href="http://www.bidnapper.com">
+	ebay sniper
+	</a> for all your eBay needs
 </body>
 
 </html>
