--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
                         <p>Somewhere around
-                            <br>University Park, PA 16802
+                            <br>Boston, MA
                             <br><a href= "mail:bxe5056@gmail.com">Email me for more info!</a>
                         </p>
                     </div>
