--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   
 			</table>
 				<br><br><br><br>
-                <h3> Current GPA: 3.73  | Semester Classification: 7 (Senior)</h3>
+                <h3> Ending GPA: 3.76 BS / 3.79 MS  | Status: Graduated (Working Full-Time)</h3>
                 
                 <!--<div class="col-lg-4 col-lg-offset-2">
                      <a href= "http://bulletins.psu.edu/undergrad/courses/I/IST/331" target="_blank">
