--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
                     <div class="intro-text">
                         <span class="name">Benjamin Eppinger</span>
                         <hr class="star-light">
-                        <span class="skills">I’m a current Undergraduate and Masters Student at The Pennsylvania State University. I am an Information Sciences and Technology Major with an intended graduation date of May 2019. I have developed a wide array of skills that I plan on putting to good use during and after my time at Penn State! <br>Take a look below for more info about me!</span>
+                        <span class="skills">I’m a full-time software developer in the Boston, MA region. I 
+				received a BS and MS in 2019 at Penn State's College of Information 
+				Sciences and Technology. I have developed a wide array of skills that will
+				benefit me in my future endeavors.<br>Take a look below for more info about me!
+			</span>
                     </div>
                 </div>
             </div>
