--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <h3>Contact Me</h3>
                         <p>
                             <a href="mail:bxe5056@gmail.com">bxe5056@gmail.com</a><br>
-                            <a href="tel:18143108292">+1 814 310 8292</a>
+                            <a href="sms:18143108292">+1 814 310 8292</a>
                         </p>
                     </div>
                 </div>
