Add not-so-sneaky beta link

--- a/dataRepo.html
+++ b/dataRepo.html
@@ -70,7 +70,7 @@
                     type="button">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="index.html#page-top">Benjamin Eppinger</a>
+            <a class="navbar-brand" href="https://bentheitguy.me/bentheitguy" title="You found my sneaky beta link. Click here to see my WIP react rewrite of this site.">Benjamin Eppinger</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
