--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <span class="sr-only">Toggle navigation</span> Menu <i
                             class="fa fa-bars"></i>
                     </button>
-                <a class="navbar-brand" href="#page-top">Benjamin Eppinger</a>
+                <a class="navbar-brand" href="https://bentheitguy.me/bentheitguy" title="You found my sneaky beta link. Click here to see my WIP react rewrite of this site.">Benjamin Eppinger</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
