Update Website Descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,27 @@
       sizes="180x180"
       href="%PUBLIC_URL%/apple-touch-icon.png"
     />
-    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <meta name="apple-mobile-web-app-title" content="Benjamin Eppinger" />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#536dfe" />
     <meta
       name="description"
+      content="Benjamin Eppinger - Full Stack Developer"
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Benjamin Eppinger" />
+    <meta
+      property="og:description"
+      content="Benjamin Eppinger - Full Stack Developer"
+    />
+    <meta property="og:site_name" content="Benjamin Eppinger" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Benjamin Eppinger" />
+    <meta
+      name="twitter:description"
       content="Benjamin Eppinger - Full Stack Developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
